--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,19 +7,24 @@ sites:
     url: https://www.google.com
   - name: Wikipedia
     url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Vicmap_Transport
+    url: https://enterprise.mapshare.vic.gov.au/server/rest/services/Vicmap_Transport/MapServer
+    method: POST
+  - name: esri mapserver non-existant layer test
+    url: https://enterprise.mapshare.vic.gov.au/server/rest/services/Vicmap_Transport/MapServer/1234
+    method: POST
+  - name: Vicmap_Transport Road Layer 1
+    url: https://enterprise.mapshare.vic.gov.au/server/rest/services/Vicmap_Transport/MapServer/1
+    method: POST
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  #cname: demo.upptime.js.org
   baseUrl: /santa
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  name: DTV Santa
+  introTitle: "Uptime status of data assets provided in the DTV platform"
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
