--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: alex-vic-geo # Your GitHub organization or username, where this repository lives
+owner: DELWP-DTV # Your GitHub organization or username, where this repository lives
 repo: santa # The name of this repository
 
 sites:
