--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,12 +10,15 @@ sites:
   - name: Vicmap_Transport
     url: https://enterprise.mapshare.vic.gov.au/server/rest/services/Vicmap_Transport/MapServer
     method: POST
+    __dangerous__body_down: "Could not access any server machines. Please contact your system"
   - name: esri mapserver non-existant layer test
     url: https://enterprise.mapshare.vic.gov.au/server/rest/services/Vicmap_Transport/MapServer/1234
     method: POST
+    __dangerous__body_down: "Could not access any server machines. Please contact your system"
   - name: Vicmap_Transport Road Layer 1
     url: https://enterprise.mapshare.vic.gov.au/server/rest/services/Vicmap_Transport/MapServer/1
     method: POST
+    __dangerous__body_down: "Could not access any server machines. Please contact your system"
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
