--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,5 @@
-# Change these first
-owner: DELWP-DTV # Your GitHub organization or username, where this repository lives
-repo: santa # The name of this repository
+owner: DELWP-DTV
+repo: santa
 
 sites:
   - name: Google
@@ -11,14 +10,20 @@ sites:
     url: https://enterprise.mapshare.vic.gov.au/server/rest/services/Vicmap_Transport/MapServer
     method: POST
     __dangerous__body_down: "Could not access any server machines. Please contact your system"
+    assignees:
+      - alex-vic-geo
   - name: esri mapserver non-existant layer test
     url: https://enterprise.mapshare.vic.gov.au/server/rest/services/Vicmap_Transport/MapServer/1234
     method: POST
     __dangerous__body_down: "Could not access any server machines. Please contact your system"
+    assignees:
+      - alex-vic-geo
   - name: Vicmap_Transport Road Layer 1
     url: https://enterprise.mapshare.vic.gov.au/server/rest/services/Vicmap_Transport/MapServer/1
     method: POST
     __dangerous__body_down: "Could not access any server machines. Please contact your system"
+    assignees:
+      - alex-vic-geo
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -28,14 +33,27 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: DTV Santa
   introTitle: "Data Catalogue Uptime Status"
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introMessage: The status page for the Digital Twin Victoria Platform Catalogue. Data assets are checked every 12 hours.
   navbar:
     - title: Status
       href: /
-    - title: DTV
+    - title: DTV-Platform
       href: https://vic.digitaltwin.terria.io/
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
+
+workflowSchedule:
+  graphs: "0 0 * * *"
+  responseTime: "0 23 * * *"
+  staticSite: "0 1 * * *"
+  summary: "0 0 * * *"
+  updateTemplate: "0 0 * * *"
+  updates: "0 3 * * *"
+  uptime: "1 */6 * * *"
+
+
+i18n:
+  footer: This page is brought to you by DTV
